# crypto-dashboard

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  RAILWAY_DEPLOYMENT.md  README.md  VENV_SETUP.md  docker-compose.yml  env.example  env.example.new  package-lock.json  pyproject.toml  pytest.ini  railway.toml  supervisord.conf  test_start_stream.py
.github/workflows/: README.md  ci.yml
analytics-service/: Dockerfile  config.py  main.py  requirements.txt  requirements_pinned.txt
api-gateway/: Dockerfile  config.py  main.py  requirements.txt  requirements_pinned.txt  test_websocket_client.py
docs/: CODE_QUALITY.md  GETTING_STARTED.md
frontend/: .env.example  .env.production  next.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
ingestion-service/: Dockerfile  config.py  main.py  requirements.txt  requirements_pinned.txt  test_auto_ingestion.py  test_ws_connection.py
local-dev/: docker-compose.yml
monitoring/: prometheus.local.yml  prometheus.yml
notification-service/: Dockerfile  config.py  main.py  requirements.txt  requirements_pinned.txt
proto/: __init__.py  analytics.proto  common.proto  ingestion.proto  notification.proto  storage.proto  test_imports.py
scripts/: generate_proto.sh  setup_local.sh  verify_venvs.sh
shared/: MANIFEST.in  requirements.txt  requirements_pinned.txt  setup.py
storage-service/: Dockerfile  config.py  main.py  railway.toml  requirements.txt  requirements_pinned.txt
stream-processing-service/: Dockerfile  config.py  main.py  requirements.txt  requirements_pinned.txt
(+212 files in other folders)
