# Python Project Configuration

[tool.black]
line-length = 88
target-version = ['py312']  # Black doesn't support py313 yet, use py312
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | env
  | ENV
  | _build
  | buck-out
  | build
  | dist
  | proto
)/
| .*_pb2\.py$
| .*_pb2_grpc\.py$
| .*_pb2\.pyi$
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = [
    "venv/*",
    "env/*",
    ".venv/*",
    "proto/*_pb2.py",
    "proto/*_pb2_grpc.py",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"
